--- a/careweb/templates/client/side-bar.html
+++ b/careweb/templates/client/side-bar.html
@@ -40,14 +40,14 @@
         <li class="treeview">
           <a href="">
             <i class="fa fa-files-o"></i>
-            <span>Plans</span>
+            <span>Dependents</span>
             <span class="pull-right-container">
               <span class="label label-primary pull-right">4</span>
             </span>
           </a>
 
         </li>
-
+<!--
         <li>
           <a href="">
             <i class="fa fa-th"></i> <span>Agents</span>
@@ -56,11 +56,11 @@
             </span>
           </a>
         </li>
-
+-->
         <li class="treeview">
           <a href="">
             <i class="fa fa-pie-chart"></i>
-            <span>Subscribers</span>
+            <span>Premiums</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
