--- a/careweb/templates/base.html
+++ b/careweb/templates/base.html
@@ -48,7 +48,9 @@
   {% include 'header.html' %}
 
   <!-- Left side column. contains the logo and sidebar -->
-  {% include 'side-bar.html' %}
+  {% block side-bar %}
+  {% endblock side-bar %}
+
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
@@ -65,86 +67,8 @@
 
  {% block modal_content_view %}
  <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">{% block modal_title %}{% endblock modal_title %}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        {% block modal_body %}
-        {% endblock modal_body %}
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        
-      </div>
-    </div>
-  </div>
-</div>
-
-<script type="text/javascript">
-  var modalDiv = $('#modal-div');
-  $(".open_modal").on("click", function(){
-    $.ajax({
-      url: $(this).attr("data-url"),
-      success: function(data){
-        modalDiv.html(data);
-        $('#exampleModalCenter').modal();
-      }
-    });
-  });
-</script>
 {% endblock modal_content_view %}
 
-
-<!-- 8888888888888888888888888888 -->
-<div class="modal-dialog modal-lg">
-    <div class="modal-content">
-        <form id="item_update_form" method='post' class="form" role="form" action=''>
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Item {{ agent.name }}</h4>
-              </div>
-              <div class="modal-body">
-                    {% csrf_token %}
-                    {{ form.non_field_errors }}
-                    <div class="form-group">
-                    {% for field in form %}
-                        <div class="form-group">
-                            {% if field.errors %}
-                                <ul class="form-errors">
-                                {% for error in field.errors %}
-                                    <li><span class="fa fa-exclamation-triangle"></span> <strong>{{ error|escape }}</strong></li>
-                                {% endfor %}
-                                </ul>
-                            {% endif %}
-                            {{ field.label_tag }} {{ field }} 
-                            {% if field.help_text %}<div class="form-helptext">{{ field.help_text }}</div>{% endif %}
-                        </div>
-                    {% endfor %}
-              </div>
-              <div class="modal-footer">
-                <input type="button" class="btn btn-default" data-dismiss="modal" value="annulla" />
-                <input type="submit" class="btn btn-primary" value="save" style="margin-bottom: 5px;" />
-              </div>
-        </form>
-        <script>
-            jQuery('.modal-content .calendar').datepicker({ dateFormat: "yy-mm-dd" });
-
-                var form_options = {
-                    target: '#modal',
-                    success: function() {  }
-                }
-                $('#item_update_form').ajaxForm(form_options);
-        </script>
-    </div><!-- /.modal-content -->
-</div><!-- /.modal-dialog -->
-<!-- 8888888888888888888888888888 -->
 
 
   <!-- /.footer- -->
