--- a/careweb/templates/accounts/register.html
+++ b/careweb/templates/accounts/register.html
@@ -2,7 +2,8 @@
 
 {% load staticfiles %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Register{% endblock title %}
+
 {% block wrapper %}
 
 <div class="login-box">
@@ -67,7 +68,7 @@
 
         <div class="col-xs-8 ">
           <a href="#">I forgot my password</a><br>
-          <a href="{% url 'register' %}" class="text-center">New member, Register here</a>
+          <a href="" class="text-center">New member, Register here</a>
         </div>
       </div>
     </form>
