--- a/careweb/templates/index.html
+++ b/careweb/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,28 +9,28 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.6 -->
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="vendor/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="{% static 'vendor/css/AdminLTE.min.css' %}">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="vendor/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="{% static 'vendor/css/skins/_all-skins.min.css' %}">
   <!-- iCheck -->
-  <link rel="stylesheet" href="plugins/iCheck/flat/blue.css">
+  <link rel="stylesheet" href="{% static 'plugins/iCheck/flat/blue.css' %}">
   <!-- Morris chart -->
-  <link rel="stylesheet" href="plugins/morris/morris.css">
+  <link rel="stylesheet" href="{% static 'plugins/morris/morris.css' %}">
   <!-- jvectormap -->
-  <link rel="stylesheet" href="plugins/jvectormap/jquery-jvectormap-1.2.2.css">
+  <link rel="stylesheet" href="{% static 'plugins/jvectormap/jquery-jvectormap-1.2.2.css' %}">
   <!-- Date Picker -->
-  <link rel="stylesheet" href="plugins/datepicker/datepicker3.css">
+  <link rel="stylesheet" href="{% static 'plugins/datepicker/datepicker3.css' %}">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
   <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+  <link rel="stylesheet" href="{% static 'plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,7 +73,7 @@
                   <li><!-- start message -->
                     <a href="#">
                       <div class="pull-left">
-                        <img src="vendor/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="{% static 'vendor/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Support Team
@@ -84,7 +86,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="vendor/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src="{% static 'vendor/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         AdminLTE Design Team
@@ -96,7 +98,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="vendor/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src="{% static 'vendor/img/user4-128x128.jpg' %}" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Developers
@@ -108,7 +110,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="vendor/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src="{% static 'vendor/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Sales Department
@@ -120,7 +122,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="vendor/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src="{% static 'vendor/img/user4-128x128.jpg' %}" class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Reviewers
@@ -253,13 +255,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="vendor/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="{% static 'vendor/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="vendor/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="{% static 'vendor/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -307,7 +309,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="vendor/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="{% static 'vendor/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
