--- a/careweb/templates/ranger/profile.html
+++ b/careweb/templates/ranger/profile.html
@@ -167,6 +167,41 @@
         </section>
     </div>
 
+
+    <form class="login100-form validate-form" method="post" action="login">
+      {% csrf_token %}
+    <span class="login100-form-title p-b-34">
+      Account Login
+    </span>
+    
+    <div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
+      {{ form.username }}
+      <span class="focus-input100"></span>
+    </div>
+    <div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type password">
+      {{ form.password }}
+      <span class="focus-input100"></span>
+    </div>
+    
+    <div class="container-login100-form-btn">
+      <button class="login100-form-btn">
+        Log in
+      </button>
+    </div>
+
+    <div class="w-full text-center p-t-27 p-b-239">
+      <span class="txt1">
+        New user: 
+      </span>
+
+      <a href="register" class="txt2">
+        Register
+      </a>
+    </div>
+
+  </form>
+
+
 </section>
 {% endblock content %}
 
