--- a/careweb/templates/footer.html
+++ b/careweb/templates/footer.html
@@ -2,12 +2,7 @@
 
  <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 2.3.12
+      <b>Version</b> 1.0.0
     </div>
-<<<<<<< HEAD
-    <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
-=======
-    <strong>Copyright &copy; 2019 <a href="http://almsaeedstudio.com">Save4Loan</a>.</strong> All rights
->>>>>>> d6292376a7a3b4e3f024692c670837f696de6cf5
-    reserved.
+    <strong>Copyright &copy; 2019 <a href="">CareWEB</a>.</strong> All rights reserved.
   </footer>
