--- a/careweb/templates/base.html
+++ b/careweb/templates/base.html
@@ -98,6 +98,9 @@
 	<!--Main-->
 	<script src="{% static 'js/main.js' %"></script>
 
+	{% block extra-js %}
+	{% endblock extra-js %}
+
 </body>
 
 </html>
