--- a/careweb/otherstatic/css/style.css
+++ b/careweb/otherstatic/css/style.css
@@ -493,7 +493,9 @@ header.header {
     font-weight: 400;
     line-height: 27px;
 }
-
+.slide-item{
+    background-image: url('img/slider/banner1.jpg');
+}
 #slider-area .slide-item {
     position: relative;
     width: 100%;
@@ -501,7 +503,7 @@ header.header {
     display: table;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover
+    background-size: cover;
 }
 
 #slider-area .slide-caption {
