--- a/careweb/templates/accounts/login.html
+++ b/careweb/templates/accounts/login.html
@@ -45,52 +45,84 @@ Login
     <!--  BreadCrumb Area Start  -->
 
 
-    <!-- SignIn Area Start -->
-    <section id="logRegForm" class="logRegForm"> 
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-7 col-md-10">
-                            <div class="contact_form_wrappre2">
-                                <h2>
-                                    Login
-                                </h2>
-                                    <form action="#">
-                                            <div class="inputArea">
-                                                <div class="form-row">
-                                                    <div class="col">
-                                                        <div class="input-group">
-                                                            <input type="text" class="form-control" placeholder="Enter username or email" aria-describedby="Site" required>
-                                                            <div class="input-group-prepend">
-                                                                <span class="input-group-text" id="Site">
-                                                                    <i class="fas fa-user"></i>
-                                                                </span>
-                                                            </div>
-                                                        </div>
+<!-- SignIn Area Start -->
+<section id="logRegForm" class="logRegForm"> 
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-7 col-md-10">
+                    <div class="contact_form_wrappre2">
+                        <h2>
+                            Login
+                        </h2>
+                            <form action="#" method="post">{% csrf_token %}
+                            {% if form.non_field_errors %}
+                                {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    {{ error }}
+                                </div>
+                                {% endfor %}
+                            {% endif %}
+
+                                <div class="inputArea">
+                                    <div class="form-row">
+                                        <div class="col">
+                                            <div class="input-group">
+                                                {% if form.username.errors %}
+                                                    <div class="alert alert-danger">
+                                                        {{ form.username.errors }}
                                                     </div>
-                                                </div>
-                                                <div class="form-row">
-                                                    <div class="col">
-                                                        <div class="input-group">
-                                                            <input type="password" class="form-control" placeholder="Your password" aria-describedby="url" required>
-                                                            <div class="input-group-prepend">
-                                                                <span class="input-group-text" id="url">
-                                                                    <i class="fas fa-key"></i>
-                                                                </span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="form-row">
-                                                    <div class="col-md-12">
-                                                        <button class="loginnow" type="submit">Login Now</button>
-                                                    </div>
+                                                {% endif %}
+                                                {{ form.username }}
+
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text" id="Site">
+                                                        <i class="fas fa-user"></i>
+                                                    </span>
                                                 </div>
                                             </div>
-                                        </form>
-                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="col">
+                                            <div class="input-group">
+                                                {% if form.password.errors %}
+                                                    <div class="alert alert-danger">
+                                                        {{ form.password.errors }}
+                                                    </div>
+                                                {% endif %}
+                                                {{ form.password }}
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text" id="url">
+                                                        <i class="fas fa-key"></i>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="col-md-12">
+                                            <button class="loginnow" type="submit">Login Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                     </div>
-                </div>
             </div>
-        </section>
-        <!-- SignIn Area Start -->
+        </div>
+    </div>
+</section>
+<!-- SignIn Area Start -->
 {% endblock content %}
+
+
+{% block extra-js %}
+<script type="text/javascript">
+  $('#id_username').addClass('form-control');
+  $('#id_username').attr('placeholder', 'Username');
+
+  // glyphicon
+
+  $('#id_password').addClass('form-control');
+  $('#id_password').attr('placeholder', 'Password');
+</script>
+{% endblock extra-js %}
