--- a/careweb/templates/accounts/register.html
+++ b/careweb/templates/accounts/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 
 {% block title %}
@@ -14,8 +15,8 @@ Register
 {% endblock footer %}
 
 {% block content %}
-<!--
-<section id="insuronbreadcrumb" class="insuronbreadcrumb extraPaddimg blog-details">
+
+<section id="insuronbreadcrumb" class="insuronbreadcrumb">
             <div class="bcoverlay"></div>
             <div class="container">
                 <div class="row">
@@ -42,7 +43,7 @@ Register
                 </div>
             </div>
         </section> 
-        --> 
+        
     <!--  BreadCrumb Area Start  -->
 
 <!-- SignUP Area Start -->
