--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -7,4 +7,294 @@ Profile
 
 {% block content %}
 
+    <!-- banner Area Start -->
+    <section id="insuronbreadcrumb" class="insuronbreadcrumb">
+        <div class="bcoverlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="Content">
+                        <h2>
+                            Life Insurance
+                        </h2>
+                        <div class="links">
+                            <ul>
+                                <li>
+                                    <a href="index.html">Home</a>
+                                </li>
+                                <li>
+                                    <span>/</span>
+                                </li>
+                                <li>
+                                    <a class="active" href="lifeInsurance.html">Life Insurance</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Welcome Area End -->
+
+    <!-- Services Area Start -->
+    <section id="serviceDetails" class="serviceDetails">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="img">
+                        <img class="img-fluid" src="img/service/serviceDetails1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="content">
+                        <h2>life Insurance</h2>
+                        <p>
+                            Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex Nemo
+                            enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
+                            qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                            consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
+                            quaerat voluptatem.
+                        </p>
+                        <p class="cpading-bottom">
+                            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
+                            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eiusolorem ipsum quia dolor sit
+                            amet, consectetur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="feature lifeinsurance">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-md-10">
+                    <div class="sectionHeader">
+                        <h2>
+                            Insurance Feature
+                        </h2>
+                        
+                        <p>
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            the book type of spaciman and scrambled it to make a type specimen book.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="box">
+                        <i class="pe-7s-headphones"></i>
+                        <h3>
+                            24/7 Support
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate modi excepturi quisquam repellendus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="box">
+                        <i class="pe-7s-user"></i>
+                        <h3>
+                            Expert Agent
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate modi excepturi quisquam repellendus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="box">
+                        <i class="pe-7s-graph1"></i>
+                        <h3>
+                            Access on The Go
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate modi excepturi quisquam repellendus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="box">
+                        <i class="pe-7s-car"></i>
+                        <h3>
+                            Safe Driving Discounts
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate modi excepturi quisquam repellendus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="box">
+                        <i class="pe-7s-shield"></i>
+                        <h3>
+                            Insurance Insight
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate modi excepturi quisquam repellendus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="box">
+                        <i class="pe-7s-tools"></i>
+                        <h3>
+                            Reliable Service
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate modi excepturi quisquam repellendus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Services Area End -->
+
+
+    <!-- Testimonial Area Start -->
+    <section id="testimonial" class="testimonial">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-5">
+                    <div class="testimonialSlider owl-carousel">
+                        <div class="single-testimonials">
+                            <img src="img/testimonial/testi-icon-1.png" class="testi-icon" alt="Awesome Image">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                            <div class="name-box-wrapper">
+                                <div class="img-box">
+                                    <img src="img/testimonial/reviewr1.jpg" alt="Awesome Image">
+                                </div>
+                                <div class="text-box">
+                                    <h4>Hailey Olkowski</h4>
+                                    <span>uihub, ui/ux designer</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="single-testimonials">
+                            <img src="img/testimonial/testi-icon-1.png" class="testi-icon" alt="Awesome Image">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                            <div class="name-box-wrapper">
+                                <div class="img-box">
+                                    <img src="img/testimonial/reviewr2.jpg" alt="Awesome Image">
+                                </div>
+                                <div class="text-box">
+                                    <h4>Benny Talone</h4>
+                                    <span>uihub, ui/ux designer</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="single-testimonials">
+                            <img src="img/testimonial/testi-icon-1.png" class="testi-icon" alt="Awesome Image">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+                            <div class="name-box-wrapper">
+                                <div class="img-box">
+                                    <img src="img/testimonial/reviewr3.jpg" alt="Awesome Image">
+                                </div>
+                                <div class="text-box">
+                                    <h4>Rigoberto Sweat</h4>
+                                    <span>uihub, ui/ux designer</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row partner-logo-wrapper">
+                        <div class="col-4 remove-col-padding partner-logos">
+                            <div class="single-logo-item">
+                                <!-- single logo item -->
+                                <a href="#">
+                                    <img class="img-fluid" src="img/patner/patner1.png" alt="partner image">
+                                </a>
+                            </div><!-- //.single logo item -->
+                        </div>
+                        <div class="col-4 remove-col-padding partner-logos">
+                            <div class="single-logo-item">
+                                <!-- single logo item -->
+                                <a href="#">
+                                    <img class="img-fluid" src="img/patner/patner2.png" alt="partner image">
+                                </a>
+                            </div><!-- //.single logo item -->
+                        </div>
+                        <div class="col-4  remove-col-padding partner-logos">
+                            <div class="single-logo-item">
+                                <!-- single logo item -->
+                                <a href="#">
+                                    <img class="img-fluid" src="img/patner/patner3.png" alt="partner image">
+                                </a>
+                            </div><!-- //.single logo item -->
+                        </div>
+                    </div>
+                    <div class="row partner-logo-wrapper">
+                        <div class="col-4 remove-col-padding partner-logos">
+                            <div class="single-logo-item">
+                                <!-- single logo item -->
+                                <a href="#">
+                                    <img class="img-fluid" src="img/patner/patner4.png" alt="partner image">
+                                </a>
+                            </div><!-- //.single logo item -->
+                        </div>
+                        <div class="col-4 remove-col-padding partner-logos">
+                            <div class="single-logo-item">
+                                <!-- single logo item -->
+                                <a href="#">
+                                    <img class="img-fluid" src="img/patner/patner5.png" alt="partner image">
+                                </a>
+                            </div><!-- //.single logo item -->
+                        </div>
+                        <div class="col-4 remove-col-padding partner-logos">
+                            <div class="single-logo-item">
+                                <!-- single logo item -->
+                                <a href="#">
+                                    <img class="img-fluid" src="img/patner/patner6.png" alt="partner image">
+                                </a>
+                            </div><!-- //.single logo item -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Testimonial Area End -->
+
+    <!-- Counter Area Start -->
+    <section id="counter" class="counter">
+        <div class="container">
+            <div class="row">
+                <div class=" col-md-6 col-xl-3">
+                    <div class="c-box">
+                        <span class="count">1000</span><sup>+</sup>
+                        <h3>Satisfy Clients</h3>
+                    </div>
+                </div>
+                <div class=" col-md-6 col-xl-3">
+                    <div class="c-box">
+                        <span class="count">300</span><sup>+</sup>
+                        <h3>Winning Awards</h3>
+                    </div>
+                </div>
+                <div class=" col-md-6 col-xl-3">
+                    <div class="c-box">
+                        <span class="count">9999</span><sup>+</sup>
+                        <h3>Lines Of Coding</h3>
+                    </div>
+                </div>
+                <div class=" col-md-6 col-xl-3">
+                    <div class="c-box">
+                        <span class="count">2000</span><sup>+</sup>
+                        <h3>Users Around World</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Counter Area End -->
+
 {% endblock content %}
