--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -6,7 +6,7 @@
         <!--Start Slider owl-carousel-->
         <div class="silder">
             <!--Start Slide Item-->
-            <div class="slide-item" style="background-image: url({% static 'img/slider/banner1.jpg' %})">
+            <div class="slide-item" style="background-image: url({% static 'img/banner3.jpg' %})">
                 <div class="overlay"></div><!-- -->
 
                 <div class="container">
