--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -41,10 +41,41 @@ Profile
     <section id="serviceDetails" class="serviceDetails">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 counter" style="padding: 10px;">  
+                    <div class="row">
+                        <div class=" col-md-12 col-xl-6">
+                            <div class="c-box">
+                                <span class="count">Date</span><sup></sup>
+                                <h3>Satisfy Clients</h3>
+                            </div>
+                        </div>
+                        <div class=" col-md-12 col-xl-6">
+                            <div class="c-box">
+                                <span class="count">Plan</span><sup></sup>
+                                <h3>Winning Awards</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="padding-top: 15px;">
+                        <div class=" col-md-12 col-xl-6">
+                            <div class="c-box">
+                                <span class="count">Renew</span><sup></sup>
+                                <h3>Lines Of Coding</h3>
+                            </div>
+                        </div>
+                        <div class=" col-md-12 col-xl-6">
+                            <div class="c-box">
+                                <span class="count">Payment</span><sup></sup>
+                                <h3>Users Around World</h3>
+                            </div>
+                        </div>
+                    </div>
+    
+                <!--
                     <div class="img">
                         <img class="img-fluid" src="img/service/serviceDetails1.jpg" alt="">
                     </div>
+                -->
                 </div>
                 <div class="col-md-6">
                     <div class="content">
