--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -45,14 +45,14 @@ Profile
                     <div class="row">
                         <div class=" col-md-12 col-xl-6">
                             <div class="c-box">
-                                <span class="count">Date</span><sup></sup>
-                                <h3>Satisfy Clients</h3>
+                                <span class="count">Premium</span><sup></sup>
+                                <h3> Due date 12th Nov 2019</h3>
                             </div>
                         </div>
                         <div class=" col-md-12 col-xl-6">
                             <div class="c-box">
                                 <span class="count">Plan</span><sup></sup>
-                                <h3>Winning Awards</h3>
+                                <h3>Future care plan</h3>
                             </div>
                         </div>
                     </div>
@@ -60,13 +60,13 @@ Profile
                         <div class=" col-md-12 col-xl-6">
                             <div class="c-box">
                                 <span class="count">Renew</span><sup></sup>
-                                <h3>Lines Of Coding</h3>
+                                <h3>Click to pay</h3>
                             </div>
                         </div>
                         <div class=" col-md-12 col-xl-6">
                             <div class="c-box">
                                 <span class="count">Payment</span><sup></sup>
-                                <h3>Users Around World</h3>
+                                <h3>Change frequency</h3>
                             </div>
                         </div>
                     </div>
